--- a/preprocess_tds.ipynb
+++ b/preprocess_tds.ipynb
@@ -41,6 +41,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# in_file = \"20210221-01_30_17_scan_phase1.pcl\"\n",
+    "# out_file = \"preprocessed_tds_phase_1.pkl\"\n",
+    "\n",
+    "in_file = \"20210221-01_43_50_scan_phase2.pcl\"\n",
+    "out_file = \"preprocessed_tds_phase_2.pkl\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
@@ -194,18 +207,18 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>index</th>\n      <th>timestamp</th>\n      <th>BPMA.469.B2D.X</th>\n      <th>BPMA.471.B2D.X</th>\n      <th>BPMA.477.B2D.X</th>\n      <th>BPMD.479.B2D.X</th>\n      <th>BPMA.469.B2D.Y</th>\n      <th>BPMA.471.B2D.Y</th>\n      <th>BPMA.477.B2D.Y</th>\n      <th>BPMD.479.B2D.Y</th>\n      <th>...</th>\n      <th>XFEL.UTIL/LASERHEATER.MOTOR/P1Z.LHOS0/FPOS</th>\n      <th>XFEL.UTIL/LASERHEATER.MOTOR/LAMBDA2.LHOS0/POS</th>\n      <th>XFEL.UTIL/LASERHEATER.MOTOR/DL.LHLVL5/FPOS</th>\n      <th>XFEL.UTIL/LASERINT/GUN/SH3_OPEN</th>\n      <th>XFEL.UTIL/LASERINT/GUN/SH4_OPEN</th>\n      <th>XFEL.DIAG/BEAM_ENERGY_MEASUREMENT/B1/ENERGY.ALL</th>\n      <th>XFEL.DIAG/BEAM_ENERGY_MEASUREMENT/B2/ENERGY.ALL</th>\n      <th>XFEL.DIAG/BEAM_ENERGY_MEASUREMENT/CL/ENERGY.ALL</th>\n      <th>XFEL.RF/LLRF.CONTROLLER/CTRL.LLTDSB2/SP.PHASE</th>\n      <th>XFEL.DIAG/CAMERA/OTRA.473.B2D/IMAGE_EXT_ZMQ</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>1.613868e+09</td>\n      <td>-0.589831</td>\n      <td>-0.471220</td>\n      <td>-9.741132</td>\n      <td>-9.526670</td>\n      <td>-0.244605</td>\n      <td>2.093896</td>\n      <td>-2.783150</td>\n      <td>-7.117940</td>\n      <td>...</td>\n      <td>0.279977</td>\n      <td>1600</td>\n      <td>352.999786</td>\n      <td>1</td>\n      <td>0</td>\n      <td>700.342346</td>\n      <td>2399.127197</td>\n      <td>NaN</td>\n      <td>59.799999</td>\n      <td>./tds_images/OTRA.473.B2D-20210221_004351_309.png</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>1.613868e+09</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>0.279977</td>\n      <td>1600</td>\n      <td>352.999786</td>\n      <td>1</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>59.799999</td>\n      <td>./tds_images/OTRA.473.B2D-20210221_004355_801.png</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>1.613868e+09</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>0.279977</td>\n      <td>1600</td>\n      <td>352.999786</td>\n      <td>1</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>59.799999</td>\n      <td>./tds_images/OTRA.473.B2D-20210221_004358_985.png</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>1.613868e+09</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>0.279977</td>\n      <td>1600</td>\n      <td>352.999786</td>\n      <td>1</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>59.799999</td>\n      <td>./tds_images/OTRA.473.B2D-20210221_004402_180.png</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>1.613868e+09</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>0.279977</td>\n      <td>1600</td>\n      <td>352.999786</td>\n      <td>1</td>\n      <td>0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>59.799999</td>\n      <td>./tds_images/OTRA.473.B2D-20210221_004405_357.png</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>191</th>\n      <td>0</td>\n      <td>1.613869e+09</td>\n      <td>-1.316300</td>\n      <td>-0.770797</td>\n      <td>-5.907073</td>\n      <td>-2.471321</td>\n      <td>-0.166762</td>\n      <td>2.119604</td>\n      <td>-3.778158</td>\n      <td>-7.493450</td>\n      <td>...</td>\n      <td>0.279977</td>\n      <td>1600</td>\n      <td>352.999786</td>\n      <td>1</td>\n      <td>0</td>\n      <td>702.247192</td>\n      <td>2397.887451</td>\n      <td>NaN</td>\n      <td>59.799999</td>\n      <td>./tds_images/OTRA.473.B2D-20210221_005443_287.png</td>\n    </tr>\n    <tr>\n      <th>192</th>\n      <td>0</td>\n      <td>1.613869e+09</td>\n      <td>-0.914917</td>\n      <td>-0.584775</td>\n      <td>-7.026993</td>\n      <td>-5.000465</td>\n      <td>-0.212766</td>\n      <td>2.066451</td>\n      <td>-3.217293</td>\n      <td>-6.750689</td>\n      <td>...</td>\n      <td>0.279977</td>\n      <td>1600</td>\n      <td>352.999786</td>\n      <td>1</td>\n      <td>0</td>\n      <td>702.138977</td>\n      <td>2398.415527</td>\n      <td>NaN</td>\n      <td>59.799999</td>\n      <td>./tds_images/OTRA.473.B2D-20210221_005446_617.png</td>\n    </tr>\n    <tr>\n      <th>193</th>\n      <td>0</td>\n      <td>1.613869e+09</td>\n      <td>-1.374585</td>\n      <td>-0.794467</td>\n      <td>-5.790493</td>\n      <td>-2.296219</td>\n      <td>-0.239866</td>\n      <td>2.037420</td>\n      <td>-3.697212</td>\n      <td>-7.249082</td>\n      <td>...</td>\n      <td>0.279977</td>\n      <td>1600</td>\n      <td>352.999786</td>\n      <td>1</td>\n      <td>0</td>\n      <td>702.027344</td>\n      <td>2398.731934</td>\n      <td>NaN</td>\n      <td>59.799999</td>\n      <td>./tds_images/OTRA.473.B2D-20210221_005449_967.png</td>\n    </tr>\n    <tr>\n      <th>194</th>\n      <td>0</td>\n      <td>1.613869e+09</td>\n      <td>-1.349098</td>\n      <td>-0.795484</td>\n      <td>-5.829101</td>\n      <td>-2.336125</td>\n      <td>-0.176721</td>\n      <td>2.114249</td>\n      <td>-3.808399</td>\n      <td>-7.521989</td>\n      <td>...</td>\n      <td>0.279977</td>\n      <td>1600</td>\n      <td>352.999786</td>\n      <td>1</td>\n      <td>0</td>\n      <td>702.272522</td>\n      <td>2397.395508</td>\n      <td>NaN</td>\n      <td>59.799999</td>\n      <td>./tds_images/OTRA.473.B2D-20210221_005453_277.png</td>\n    </tr>\n    <tr>\n      <th>195</th>\n      <td>0</td>\n      <td>1.613869e+09</td>\n      <td>-1.372998</td>\n      <td>-0.797720</td>\n      <td>-5.739698</td>\n      <td>-2.178849</td>\n      <td>-0.246581</td>\n      <td>2.027040</td>\n      <td>-3.672352</td>\n      <td>-7.153725</td>\n      <td>...</td>\n      <td>0.279977</td>\n      <td>1600</td>\n      <td>352.999786</td>\n      <td>1</td>\n      <td>0</td>\n      <td>702.079956</td>\n      <td>2398.843994</td>\n      <td>NaN</td>\n      <td>59.799999</td>\n      <td>./tds_images/OTRA.473.B2D-20210221_005456_672.png</td>\n    </tr>\n  </tbody>\n</table>\n<p>196 rows × 369 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 3
     }
    ],
    "source": [
-    "db = SnapshotDB(\"20210221-01_43_50_scan_phase2.pcl\")\n",
+    "db = SnapshotDB(in_file)\n",
     "df = db.load()\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +240,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 4
     }
    ],
    "source": [
@@ -238,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +273,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 5
     }
    ],
    "source": [
@@ -271,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +306,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 6
     }
    ],
    "source": [
@@ -304,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +339,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 7
     }
    ],
    "source": [
@@ -337,7 +350,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0      0.25550\n",
+       "1          NaN\n",
+       "2          NaN\n",
+       "3          NaN\n",
+       "4          NaN\n",
+       "        ...   \n",
+       "191    0.25205\n",
+       "192    0.25000\n",
+       "193    0.24610\n",
+       "194    0.24920\n",
+       "195    0.24430\n",
+       "Name: XFEL.DIAG/CHARGE.ML/TORA.25.I1/CHARGE.ALL, Length: 196, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "# Charge\n",
+    "charge = df[\"XFEL.DIAG/CHARGE.ML/TORA.25.I1/CHARGE.ALL\"]\n",
+    "charge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -370,30 +416,34 @@
        "194  [[0, 0, 0, 0, 0, 0, 0, 0, 13, 11, 4, 4, 0, 0, ...        True   \n",
        "195  [[0, 0, 0, 3, 13, 0, 0, 4, 1, 0, 25, 0, 15, 0,...        True   \n",
        "\n",
-       "     l1_chrip_phase  \n",
-       "0              -7.0  \n",
-       "1              -7.0  \n",
-       "2              -7.0  \n",
-       "3              -7.0  \n",
-       "4              -7.0  \n",
-       "..              ...  \n",
-       "191             5.0  \n",
-       "192             5.0  \n",
-       "193             5.0  \n",
-       "194             5.0  \n",
-       "195             5.0  \n",
+       "     l1_chrip_phase   charge  \n",
+       "0              -7.0  0.25550  \n",
+       "1              -7.0      NaN  \n",
+       "2              -7.0      NaN  \n",
+       "3              -7.0      NaN  \n",
+       "4              -7.0      NaN  \n",
+       "..              ...      ...  \n",
+       "191             5.0  0.25205  \n",
+       "192             5.0  0.25000  \n",
+       "193             5.0  0.24610  \n",
+       "194             5.0  0.24920  \n",
+       "195             5.0  0.24430  \n",
        "\n",
-       "[196 rows x 4 columns]"
+       "[196 rows x 5 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>time</th>\n      <th>tds_image</th>\n      <th>is_beam_on</th>\n      <th>l1_chrip_phase</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2021-02-21 00:43:50.284730196</td>\n      <td>[[21, 0, 0, 0, 38, 0, 0, 10, 0, 0, 3, 0, 11, 0...</td>\n      <td>True</td>\n      <td>-7.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2021-02-21 00:43:55.311881065</td>\n      <td>[[9, 0, 5, 0, 0, 11, 0, 0, 14, 6, 12, 14, 0, 0...</td>\n      <td>False</td>\n      <td>-7.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2021-02-21 00:43:58.582304001</td>\n      <td>[[0, 0, 12, 0, 15, 0, 10, 2, 14, 0, 10, 0, 0, ...</td>\n      <td>False</td>\n      <td>-7.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2021-02-21 00:44:01.893963099</td>\n      <td>[[0, 0, 1, 13, 0, 0, 0, 0, 21, 0, 0, 0, 0, 0, ...</td>\n      <td>False</td>\n      <td>-7.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2021-02-21 00:44:05.052917004</td>\n      <td>[[0, 4, 0, 25, 0, 5, 0, 13, 0, 0, 22, 0, 0, 0,...</td>\n      <td>False</td>\n      <td>-7.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>191</th>\n      <td>2021-02-21 00:54:43.028972149</td>\n      <td>[[0, 0, 0, 0, 7, 0, 0, 15, 1, 0, 24, 0, 3, 0, ...</td>\n      <td>True</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>192</th>\n      <td>2021-02-21 00:54:46.380817890</td>\n      <td>[[0, 10, 13, 3, 0, 0, 11, 0, 0, 0, 13, 0, 20, ...</td>\n      <td>True</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>193</th>\n      <td>2021-02-21 00:54:49.649235010</td>\n      <td>[[13, 1, 0, 0, 17, 0, 0, 0, 0, 0, 0, 21, 0, 20...</td>\n      <td>True</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>194</th>\n      <td>2021-02-21 00:54:53.037122011</td>\n      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 13, 11, 4, 4, 0, 0, ...</td>\n      <td>True</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>195</th>\n      <td>2021-02-21 00:54:56.322474957</td>\n      <td>[[0, 0, 0, 3, 13, 0, 0, 4, 1, 0, 25, 0, 15, 0,...</td>\n      <td>True</td>\n      <td>5.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>196 rows × 4 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>time</th>\n      <th>tds_image</th>\n      <th>is_beam_on</th>\n      <th>l1_chrip_phase</th>\n      <th>charge</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2021-02-21 00:43:50.284730196</td>\n      <td>[[21, 0, 0, 0, 38, 0, 0, 10, 0, 0, 3, 0, 11, 0...</td>\n      <td>True</td>\n      <td>-7.0</td>\n      <td>0.25550</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2021-02-21 00:43:55.311881065</td>\n      <td>[[9, 0, 5, 0, 0, 11, 0, 0, 14, 6, 12, 14, 0, 0...</td>\n      <td>False</td>\n      <td>-7.0</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2021-02-21 00:43:58.582304001</td>\n      <td>[[0, 0, 12, 0, 15, 0, 10, 2, 14, 0, 10, 0, 0, ...</td>\n      <td>False</td>\n      <td>-7.0</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2021-02-21 00:44:01.893963099</td>\n      <td>[[0, 0, 1, 13, 0, 0, 0, 0, 21, 0, 0, 0, 0, 0, ...</td>\n      <td>False</td>\n      <td>-7.0</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2021-02-21 00:44:05.052917004</td>\n      <td>[[0, 4, 0, 25, 0, 5, 0, 13, 0, 0, 22, 0, 0, 0,...</td>\n      <td>False</td>\n      <td>-7.0</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>191</th>\n      <td>2021-02-21 00:54:43.028972149</td>\n      <td>[[0, 0, 0, 0, 7, 0, 0, 15, 1, 0, 24, 0, 3, 0, ...</td>\n      <td>True</td>\n      <td>5.0</td>\n      <td>0.25205</td>\n    </tr>\n    <tr>\n      <th>192</th>\n      <td>2021-02-21 00:54:46.380817890</td>\n      <td>[[0, 10, 13, 3, 0, 0, 11, 0, 0, 0, 13, 0, 20, ...</td>\n      <td>True</td>\n      <td>5.0</td>\n      <td>0.25000</td>\n    </tr>\n    <tr>\n      <th>193</th>\n      <td>2021-02-21 00:54:49.649235010</td>\n      <td>[[13, 1, 0, 0, 17, 0, 0, 0, 0, 0, 0, 21, 0, 20...</td>\n      <td>True</td>\n      <td>5.0</td>\n      <td>0.24610</td>\n    </tr>\n    <tr>\n      <th>194</th>\n      <td>2021-02-21 00:54:53.037122011</td>\n      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 13, 11, 4, 4, 0, 0, ...</td>\n      <td>True</td>\n      <td>5.0</td>\n      <td>0.24920</td>\n    </tr>\n    <tr>\n      <th>195</th>\n      <td>2021-02-21 00:54:56.322474957</td>\n      <td>[[0, 0, 0, 3, 13, 0, 0, 4, 1, 0, 25, 0, 15, 0,...</td>\n      <td>True</td>\n      <td>5.0</td>\n      <td>0.24430</td>\n    </tr>\n  </tbody>\n</table>\n<p>196 rows × 5 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 10
     }
    ],
    "source": [
-    "preprocessed = pd.DataFrame({\"time\": time, \"tds_image\": tds_image, \"is_beam_on\": is_beam_on, \"l1_chrip_phase\": l1_chrip_phase})\n",
-    "preprocessed.to_pickle(\"preprocessed_phase_2.pkl\")\n",
+    "preprocessed = pd.DataFrame({\"time\": time,\n",
+    "                             \"tds_image\": tds_image,\n",
+    "                             \"is_beam_on\": is_beam_on,\n",
+    "                             \"l1_chrip_phase\": l1_chrip_phase,\n",
+    "                             \"charge\": charge})\n",
+    "preprocessed.to_pickle(out_file)\n",
     "preprocessed"
    ]
   },
