Note quite sure what I did here

--- a/preprocess_crisp.ipynb
+++ b/preprocess_crisp.ipynb
@@ -218,6 +218,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "XFEL.SDIAG/THZ_SPECTROMETER.FORMFACTOR/CRD.1934.TL/INTENSITY.TD\nXFEL.SDIAG/THZ_SPECTROMETER.FORMFACTOR/CRD.1934.TL/FORMFACTOR.XY\nXFEL.SDIAG/THZ_SPECTROMETER.FORMFACTOR/CRD.1934.TL/FORMFACTOR_DETECTLIMIT.XY\nXFEL.SDIAG/THZ_SPECTROMETER.FORMFACTOR/CRD.1934.TL/STAGE\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in df.columns:\n",
+    "    if c.startswith(\"XFEL.SDIAG/THZ_SPECTROMETER.FORMFACTOR/CRD.1934.TL/\"):\n",
+    "        print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
