First app prototype

--- a/spectral_vd_highlow.ipynb
+++ b/spectral_vd_highlow.ipynb
@@ -100,6 +100,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00020095917745111108\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(limit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100,)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interpolated[0][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -124,6 +161,26 @@
     "formfactors_both = [current2formfactor(*current, grating=\"both\") for current in filtered]\n",
     "formfactors_low = [current2formfactor(*current, grating=\"low\") for current in filtered]\n",
     "# formfactors_high = [current2formfactor(*current, grating=\"high\") for current in filtered]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(999,)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "formfactors_both[0][0].shape"
    ]
   },
   {
