--- a/spectral_vd_ocelot.ipynb
+++ b/spectral_vd_ocelot.ipynb
@@ -6788,7 +6788,7 @@
    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -6802,7 +6802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.11"
   },
   "metadata": {
    "interpreter": {
