--- a/spectral_vd_width.ipynb
+++ b/spectral_vd_width.ipynb
@@ -265,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Make formfactors"
+    "#### Generate formfactors"
    ]
   },
   {
