Fix additional print output after script has already terminated

--- a/test_gan.ipynb
+++ b/test_gan.ipynb
@@ -951,7 +951,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "c63f9adaa63c73a6a8850b42fbf17f9d8919d0799505dc429031d8678a32e42c"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
