Convert plot to be object-oriented

--- a/figures_dissertation.ipynb
+++ b/figures_dissertation.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
     "print(f\"{plt.rcParams['font.size'] = }\")\n",
     "# print(f\"{plt.rcParams = }\")\n",
     "\n",
-    "plt.figure(figsize=(426.9 / 72.72, 426.9 / 72.72 * 0.66))\n",
+    "fig, axs = plt.subplots(3, len(samples), figsize=(426.9 / 72.72, 426.9 / 72.72 * 0.66))\n",
     "\n",
     "for i, sample in enumerate(samples):\n",
     "    (_, _), (current_profile, bunch_length) = current_dataset_test[sample]\n",
@@ -216,9 +216,8 @@
     "    #     show_plots=False,\n",
     "    # )\n",
     "\n",
-    "    plt.subplot(3, len(samples), i + 1)\n",
     "    predicted_lps_image[predicted_lps_image < cmap_cutoff] = np.nan\n",
-    "    plt.imshow(\n",
+    "    axs[0, i].imshow(\n",
     "        np.flipud(predicted_lps_image[0].transpose()),\n",
     "        vmin=0,\n",
     "        aspect=\"auto\",\n",
@@ -230,22 +229,10 @@
     "            predicted_lps_range[0, 1] / 2 * 1e2,\n",
     "        ),\n",
     "    )\n",
-    "    if i == 0:\n",
-    "        plt.ylabel(r\"$\\delta_E$ (\\%)\")\n",
-    "    if i == len(samples) - 1:\n",
-    "        plt.text(\n",
-    "            0.95,\n",
-    "            0.85,\n",
-    "            \"Reconstruction\",\n",
-    "            color=\"white\",\n",
-    "            horizontalalignment=\"right\",\n",
-    "            transform=plt.gca().transAxes,\n",
-    "        )\n",
     "\n",
-    "    plt.subplot(3, len(samples), len(samples) + i + 1)\n",
     "    real_lps_image = lps_dataset_test.lps_images[sample].copy()\n",
     "    real_lps_image[real_lps_image < cmap_cutoff] = np.nan\n",
-    "    plt.imshow(\n",
+    "    axs[1, i].imshow(\n",
     "        np.flipud(real_lps_image.transpose()),\n",
     "        vmin=0,\n",
     "        aspect=\"auto\",\n",
@@ -257,35 +244,44 @@
     "            lps_dataset_test.lps_ranges[sample, 1] / 2 * 1e2,\n",
     "        ),\n",
     "    )\n",
-    "    if i == 0:\n",
-    "        plt.ylabel(r\"$\\delta_E$ (\\%)\")\n",
-    "    if i == len(samples) - 1:\n",
-    "        plt.text(\n",
-    "            0.95,\n",
-    "            0.85,\n",
-    "            \"Ground truth\",\n",
-    "            color=\"white\",\n",
-    "            horizontalalignment=\"right\",\n",
-    "            transform=plt.gca().transAxes,\n",
-    "        )\n",
     "\n",
-    "    plt.subplot(3, len(samples), 2 * len(samples) + i + 1)\n",
-    "    plt.plot(\n",
+    "    axs[2, i].plot(\n",
     "        real_ss * 1e3,\n",
     "        current_dataset_test.current_profiles[sample],\n",
     "        label=\"Ground truth\",\n",
     "    )\n",
-    "    plt.plot(predicted_ss * 1e3, predicted_current_profile[0], label=\"Reconstruction\")\n",
+    "    axs[2, i].plot(\n",
+    "        predicted_ss * 1e3, predicted_current_profile[0], label=\"Reconstruction\"\n",
+    "    )\n",
     "    # plt.plot(recon_time, recon_current)\n",
-    "    plt.xlabel(r\"$s$ (mm)\")\n",
+    "    axs[2, i].set_xlabel(r\"$s$ (mm)\")\n",
     "    if i == 0:\n",
-    "        plt.ylabel(r\"$I$ (A)\")\n",
+    "        axs[2, i].set_ylabel(r\"$I$ (A)\")\n",
     "    if i == len(samples) - 1:\n",
-    "        plt.legend()\n",
+    "        axs[2, i].legend()\n",
+    "\n",
+    "axs[0, 0].set_ylabel(r\"$\\delta_E$ (\\%)\")\n",
+    "axs[1, 0].set_ylabel(r\"$\\delta_E$ (\\%)\")\n",
+    "axs[0, len(samples) - 1].text(\n",
+    "    0.95,\n",
+    "    0.85,\n",
+    "    \"Reconstruction\",\n",
+    "    color=\"white\",\n",
+    "    horizontalalignment=\"right\",\n",
+    "    transform=axs[0, i].transAxes,\n",
+    ")\n",
+    "axs[1, len(samples) - 1].text(\n",
+    "    0.95,\n",
+    "    0.85,\n",
+    "    \"Ground truth\",\n",
+    "    color=\"white\",\n",
+    "    horizontalalignment=\"right\",\n",
+    "    transform=axs[1, i].transAxes,\n",
+    ")\n",
     "\n",
     "plt.tight_layout()\n",
     "# plt.subplots_adjust(wspace=0.4, hspace=0.3)\n",
-    "plt.savefig(\"figures/dissertation_prediction_examples.pdf\")\n",
+    "fig.savefig(\"figures/dissertation_prediction_examples.pdf\")\n",
     "plt.show()"
    ]
   },
